--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
-title: John Doe # your name (or website title) here
+title: Nur Sabrina # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
+  Data Analyst Fellowship in NTUC LearningHub
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
