--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Nur Sabrina # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: #"/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Analyst Fellowship in NTUC LearningHub
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  #<a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
